# agent-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  plan.md
.claude/: context.md
.codex/: change-log.md  implementation-journal.md  issues-and-resolutions.md  mimo-first-api-call.md  mimo-index.html  mimo-speech-synthesis.md  project-memory.md
.github/: pull_request_template.md
clients/python-desktop-client/: README.md  pyproject.toml
clients/python-desktop-client/src/agent_server_desktop_client/: __init__.py  app.py  audio.py  protocol.py  rtos_mock.py  runner.py  transport.py
clients/python-desktop-client/tests/: test_audio.py  test_protocol.py  test_rtos_mock.py  test_runner.py
profiles/: household-demo.env.example
scripts/: codex-doctor.sh  dev-funasr-cosyvoice.sh  dev-funasr-mimo.ps1  dev-funasr.ps1  dev.ps1  docker-config-check.sh  download-local-llm-model.sh  install-linux-stack.sh  install-local-nginx-proxy.sh  install-local-systemd-stack.sh  provision-local-qwen-agent.sh  require-python-3-11.sh  run-agentd-local.sh  run-cosyvoice-fastapi-local.sh  run-funasr-worker-local.sh  run-local-llm-worker.sh  smoke-funasr.ps1  smoke-funasr.sh  smoke-rtos-mock.ps1  smoke-rtos-mock.sh  start-cosyvoice-fastapi.sh  start-funasr-worker.ps1  test-go-integration.sh  test-go-system.sh  test-go-unit.sh  (+4 more)
workers/python/: README.md  pyproject.toml
workers/python/src/agent_server_workers/: __init__.py  funasr_service.py  local_llm_service.py
workers/python/tests/: test_funasr_service.py  test_local_llm_service.py
(+303 files in other folders)
